--- a/project_04/views/layouts/main.handlebars
+++ b/project_04/views/layouts/main.handlebars
@@ -1,160 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>An Awesome App</title>
-  <script src="//localhost:35729/livereload.js"></script>
 
-    <script src="../bower_components/jquery/jquery.min.js"></script>
-    <script src="../bower_components/moment/min/moment.min.js"></script>
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
-    <link href="../bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css"/>
+  {{>_header}}
 
-  {{!-- <link rel="fonts/glyphicons-halflings-regular">
-  <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css">
-  <link rel="stylesheet" href="css/bootstrap.css"> --}}
-
-  <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="     stylesheet" type="text/css">
-  <link href="css/grayscale.min.css" rel="stylesheet">
 </head>
 
-  <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-      <!-- Navigation -->
-      <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-          <div class="container">
-              <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                      Menu <i class="fa fa-bars"></i>
-                  </button>
-                  Welcome {{user.local.email}}
-                  <a href="/login">
-                  <button type="submit" class="btn btn-default navbar-btn">
-                  Login
-                  </button>
-                  </a>
-                  <a href = "/logout"> Logout</a>
-              </div>
+   {{>_nav}}
 
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                  <ul class="nav navbar-nav">
-                      <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                      <li class="hidden">
-                          <a href="#page-top"></a>
-                      </li>
-                      <li>
-                          <a class="page-scroll" href="#about">About</a>
-                      </li>
-                      <li>
-                          <a class="page-scroll" href="#download">Sign Up</a>
-                      </li>
-                      <li>
-                          <a class="page-scroll" href="#contact">Contact</a>
-                      </li>
-                  </ul>
-              </div>
-              <!-- /.navbar-collapse -->
-          </div>
-          <!-- /.container -->
-      </nav>
+    <!-- Intro Header -->
+    <header class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading">
+                        {{title}}
+                        </h1>
+                        <p class="intro-text">blah</p>
+                        {{{body}}}
+                        <a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 
-      <!-- Intro Header -->
-      <header class="intro">
-          <div class="intro-body">
-              <div class="container">
-                  <div class="row">
-                      <div class="col-md-8 col-md-offset-2">
-                          <h1 class="brand-heading">{{title}}</h1>
-                          <p class="intro-text">
-                            {{{ body }}}
-                              <br></p>
-                          <a href="#about" class="btn btn-circle page-scroll">
-                              <i class="fa fa-angle-double-down animated"></i>
-                          </a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </header>
+    <!-- About Section -->
+   <section id="about" class="container content-section text-center">
+           <div class="row">
+               <div class="col-lg-8 col-lg-offset-2">
+                   <h2>About</h2>
+                   <p>jlkcjlkcjXZLKJCl;Kjl;kjl;kdjskjas;lkddal;skdnasld;kjasdl;kjasd;lfkajsdf;laksdjfa;lskdfjas;ldfjasfl;kjasl;dkfjas;lkfjsal;kfja;lskfjals;kdfjas;lkfjasl;kfjas
+                   </p>
+               </div>
+           </div>
+       </section>
 
-      <!-- About Section -->
-      <section id="about" class="container content-section text-center">
-          <div class="row">
-              <div class="col-lg-8 col-lg-offset-2">
-                  <h2>About this app</h2>
-                  <p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
-                  </p>
-              </div>
-          </div>
-      </section>
+    <!-- Download Section -->
+    <section id="signup" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    {{>_forms_sign}}
+                </div>
+            </div>
+        </div>
+    </section>
 
-      <!-- Download Section -->
-      <section id="download" class="content-section text-center">
-          <div class="download-section">
-              <div class="container">
-                  <div class="col-lg-8 col-lg-offset-2">
-                      <h2>Sign Up</h2>
-                      <p>Sign up and start setting reminders now!</p>
-                      <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
-                  </div>
-              </div>
-          </div>
-      </section>
+    <section id="login" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    {{>_forms_login}}
+                </div>
+            </div>
+        </div>
+    </section>
 
-      <!-- Contact Section -->
-      <section id="contact" class="container content-section text-center">
-          <div class="row">
-              <div class="col-lg-8 col-lg-offset-2">
-                  <h2>Contact Me!</h2>
-                  <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                  <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                  </p>
-                  <ul class="list-inline banner-social-buttons">
-                      <li>
-                          <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                      </li>
-                      <li>
-                          <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                      </li>
-                      <li>
-                          <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </section>
-      <!-- Map Section -->
-    <div id="map"></div>
+    <!-- Contact Section -->
+    <section id="contact" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Get in touch</h2>
+                <p><a href="mailto:contact@lesliebehum.io">contact@lesliebehum.io</a>
+                </p>
+                <ul class="list-inline banner-social-buttons">
 
+                    <li>
+                        <a href="https://github.com/itsthecheat" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    </li>
 
-      <!-- Footer -->
-      <footer>
-          <div class="container text-center">
-              <p>Copyright &copy; Leslie 2017</p>
-          </div>
-      </footer>
+                </ul>
+            </div>
+        </div>
+    </section>
 
-      <!-- jQuery -->
-      <script src="../js/jquery.js"></script>
+    <!-- Map Section -->
+    <div class="container content-section text-center"></div>
 
-      <!-- Bootstrap Core JavaScript -->
-      <script src="../js/bootstrap.min.js"></script>
+    <!-- Footer -->
+    <footer>
+        <div class="container text-center">
+            <p>Copyright &copy; Your Website 2016</p>
+        </div>
+    </footer>
 
-      <!-- Plugin JavaScript -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
-      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-      <!-- Theme JavaScript -->
-      <script src="../js/grayscale.min.js"></script>
+    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
+    <!-- Theme JavaScript -->
+    <script src="js/grayscale.min.js"></script>
 
 </body>
 
