--- a/project_04/views/partials/_forms_login.handlebars
+++ b/project_04/views/partials/_forms_login.handlebars
@@ -1,13 +1,12 @@
 
-
 <div class="container">
 
 
     <div class="omb_login">
-      <h3 class="omb_authTitle">Sign up here. Already a member? <a href="/login">Login</a></h3>
+      <h3 class="omb_authTitle">Login</h3>
     <div class="row omb_row-sm-offset-3 omb_socialButtons">
           <div class="col-xs-4 col-sm-2">
-            <a href="" class="btn btn-lg btn-block omb_btn-facebook">
+            <a href="/auth/facebook" class="btn btn-lg btn-block omb_btn-facebook">
               <i class="fa fa-facebook visible-xs"></i>
               <span class="hidden-xs">Facebook</span>
             </a>
@@ -16,9 +15,9 @@
 
           </div>
           <div class="col-xs-4 col-sm-2">
-            <a href="#" class="btn btn-lg btn-block omb_btn-google">
+            <a href="/auth/google" class="btn btn-lg btn-block omb_btn-google">
               <i class="fa fa-google-plus visible-xs"></i>
-              <span class="hidden-xs">Google+</span>
+              <span class="hidden-xs">Google</span>
             </a>
           </div>
     </div>
@@ -33,7 +32,7 @@
     <div class="row omb_row-sm-offset-3">
       <div class="col-xs-12 col-sm-6">
 
-          <form class="omb_loginForm" action="/signup" autocomplete="off" method="POST">
+          <form class="omb_loginForm" action="/login" autocomplete="off" method="POST">
           {{!-- <div class="input-group">
             <span class="input-group-addon"><i class="fa fa-user"></i></span>
             <input type="text" class="form-control" name="name" placeholder="first name">
@@ -49,14 +48,18 @@
             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
             <input type="password" class="form-control" name="password" placeholder="Password">
           </div>
-                    <span class="help-block">Password error</span>
+                    <span class="help-block"></span>
 
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
         </form>
+        <h5>Not a member? <a href="/signup">Sign up</a></h5>
+
       </div>
       </div>
     <div class="row omb_row-sm-offset-3">
+
       <div class="col-xs-12 col-sm-3">
+
         <label class="checkbox">
           <input type="checkbox" value="remember-me">Remember Me
         </label>
@@ -67,6 +70,4 @@
     </div>
   </div>
 
-
-
-        </div>
+</div>
