update user, add datetime picker

--- a/project_04/views/index.handlebars
+++ b/project_04/views/index.handlebars
@@ -1,3 +1,5 @@
+<script src="./js/send.js" type="text/javascript" charset="utf-8" async defer></script>
+
 <h1>{{title }}</h1>
 <p>Welcome to {{title }}</p>
 
