--- a/project_04/views/partials/_nav_user.handlebars
+++ b/project_04/views/partials/_nav_user.handlebars
@@ -26,10 +26,10 @@
                        <a class="page-scroll" href="/logout"><span class="btn btn-default btn-lg">Logout</span></a>
                    </li>
                    <li>
-                       <a class="page-scroll" href="#about">About</a>
+                       <a class="page-scroll" href="/#about">About</a>
                    </li>
                    <li>
-                       <a class="page-scroll" href="#contact">Contact</a>
+                       <a class="page-scroll" href="/#contact">Contact</a>
                    </li>
                </ul>
            </div>
