--- a/project_04/views/partials/_user.handlebars
+++ b/project_04/views/partials/_user.handlebars
@@ -1,1 +1,63 @@
-<p>test</p>
+<div class="container">
+
+
+    <div class="omb_login">
+      <h3 class="omb_authTitle">Enter your message below</h3>
+
+
+    <div class="row omb_row-sm-offset-3 omb_loginOr">
+      <div class="col-xs-12 col-sm-6">
+
+      </div>
+    </div>
+
+    <div class="row omb_row-sm-offset-3">
+      <div class="col-xs-12 col-sm-6">
+
+          <form class="omb_loginForm" action="/appointments" autocomplete="off" method="POST">
+
+          <span class="help-block"></span>
+          <div class="input-group">
+            <span class="input-group-addon"></span>
+            <input type="text" class="form-control" name="phone" placeholder="phone number">
+          </div>
+
+          <span class="help-block"></span>
+
+          <div class="input-group">
+            <span class="input-group-addon"></span>
+            <input type="text" class="form-control" name="message" placeholder="message">
+          </div>
+
+          <span class="help-block"></span>
+
+           <div class="input-group date" id="datetimepicker1">
+            <input type="text" class="form-control" name="date">
+            <span class="input-group-addon glyphicon-calendar glyphicon">
+            </span>
+          </div>
+
+          <span class="help-block"></span>
+
+
+          <button class="btn btn-lg btn-primary btn-block" type="submit">
+          Submit
+          </button>
+        </form>
+
+      </div>
+      </div>
+    <div class="row omb_row-sm-offset-3">
+
+    </div>
+  </div>
+
+</div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.css">
+<link rel="stylesheet" href="css/forms.css">
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+<script src="js/datetime.js"></script>
+
+
