fixed appointment db, post works

--- a/project_04/views/layouts/main.handlebars
+++ b/project_04/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
                         <h1 class="brand-heading">
                         {{title}}
                         </h1>
-                        <p class="intro-text">blah</p>
+
                         {{{body}}}
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -38,8 +38,7 @@
            <div class="row">
                <div class="col-lg-8 col-lg-offset-2">
                    <h2>About</h2>
-                   <p>jlkcjlkcjXZLKJCl;Kjl;kjl;kdjskjas;lkddal;skdnasld;kjasdl;kjasd;lfkajsdf;laksdjfa;lskdfjas;ldfjasfl;kjasl;dkfjas;lkfjsal;kfja;lskfjals;kdfjas;lkfjasl;kfjas
-                   </p>
+                   <p class="intro-text">Remind yourself about things and stuff, or schedule a message to interrupt a potential bad date</p>
                </div>
            </div>
        </section>
@@ -89,7 +88,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
+            <p>Copyright &copy; Leslie Behum 2017</p>
         </div>
     </footer>
 
