--- a/project_04/views/partials/_user.handlebars
+++ b/project_04/views/partials/_user.handlebars
@@ -14,25 +14,25 @@
     <div class="row omb_row-sm-offset-3">
       <div class="col-xs-12 col-sm-6">
 
-          <form class="omb_loginForm" action="/appointments" autocomplete="off" method="POST">
+          <form class="omb_loginForm" action="/user" autocomplete="off" method="POST">
 
           <span class="help-block"></span>
           <div class="input-group">
             <span class="input-group-addon"></span>
-            <input type="text" class="form-control" name="phone" placeholder="phone number">
+            <input type="text" class="form-control" name="phoneNumber" placeholder="phone number">
           </div>
 
           <span class="help-block"></span>
 
           <div class="input-group">
             <span class="input-group-addon"></span>
-            <input type="text" class="form-control" name="message" placeholder="message">
+            <input type="text" class="form-control" name="notification" placeholder="notification">
           </div>
 
           <span class="help-block"></span>
 
            <div class="input-group date" id="datetimepicker1">
-            <input type="text" class="form-control" name="date">
+            <input type="text" class="form-control" name="time">
             <span class="input-group-addon glyphicon-calendar glyphicon">
             </span>
           </div>
