--- a/project_04/views/index.handlebars
+++ b/project_04/views/index.handlebars
@@ -1,4 +1,3 @@
 <script src="./js/send.js" type="text/javascript" charset="utf-8" async defer></script>
 
-<h1>{{title }}</h1>
-<p>Welcome to {{title }}</p>
+<p>SMS scheduling service <br />Phone calls coming soon!</p>
