--- a/project_04/views/partials/_user.handlebars
+++ b/project_04/views/partials/_user.handlebars
@@ -14,36 +14,7 @@
     <div class="row omb_row-sm-offset-3">
       <div class="col-xs-12 col-sm-6">
 
-          <form class="omb_loginForm" action="/user" autocomplete="off" method="POST">
-
-          <span class="help-block"></span>
-          <div class="input-group">
-            <span class="input-group-addon"></span>
-            <input type="text" class="form-control" name="phoneNumber" placeholder="phone number">
-          </div>
-
-          <span class="help-block"></span>
-
-          <div class="input-group">
-            <span class="input-group-addon"></span>
-            <input type="text" class="form-control" name="notification" placeholder="notification">
-          </div>
-
-          <span class="help-block"></span>
-
-           <div class="input-group date" id="datetimepicker1">
-            <input type="text" class="form-control" name="time">
-            <span class="input-group-addon glyphicon-calendar glyphicon">
-            </span>
-          </div>
-
-          <span class="help-block"></span>
-
-
-          <button class="btn btn-lg btn-primary btn-block" type="submit">
-          Submit
-          </button>
-        </form>
+    {{>_forms_appt}}
 
       </div>
       </div>
