--- a/project_04/views/partials/_forms_appt.handlebars
+++ b/project_04/views/partials/_forms_appt.handlebars
@@ -1,4 +1,4 @@
-  <form class="omb_loginForm" action="/user" autocomplete="off" method="POST">
+  <form class="omb_loginForm" action="/" autocomplete="off" method="POST">
 
   <span class="help-block"></span>
   <div class="input-group">
@@ -27,7 +27,7 @@
   <span class="help-block"></span>
 
    <div class="input-group date" id="datetimepicker1">
-    <input type="text" class="form-control" name="time">
+    <input class="form-control" name="time">
     <span class="input-group-addon glyphicon-calendar glyphicon">
     </span>
   </div>
