--- a/views/partials/_header.handlebars
+++ b/views/partials/_header.handlebars
@@ -10,6 +10,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.min.js"></script>
 
 
     <!-- Custom Fonts -->
