--- a/views/partials/_forms_appt.handlebars
+++ b/views/partials/_forms_appt.handlebars
@@ -1,4 +1,4 @@
-  <form class="omb_loginForm" action="/" autocomplete="off" method="POST">
+  <form class="omb_loginForm" action="/user" autocomplete="off" method="POST">
 
   <span class="help-block"></span>
   <div class="input-group">
@@ -39,3 +39,4 @@
   Submit
   </button>
 </form>
+{{apointments}}
